[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icons/click.png" type="Texture" id=1]
[ext_resource path="res://scenes/GUI/BaseButton.gd" type="Script" id=2]

[node name="BaseButton" type="TextureButton"]
margin_right = 100.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
desciption = "Menu Title"

[node name="Sweep" type="TextureProgress" parent="."]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
margin_right = 100.0
margin_bottom = 100.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Counter" type="MarginContainer" parent="."]
margin_left = 65.0
margin_top = 75.0
margin_right = 91.0
margin_bottom = 93.0
custom_constants/margin_right = 0
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Counter"]
margin_left = 5.0
margin_top = 2.0
margin_right = 26.0
margin_bottom = 16.0
text = "2.0"
align = 2
clip_text = true

[node name="LabelPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = -2.28882e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Label" parent="LabelPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -17.0
margin_right = 40.0
margin_bottom = -2.0
text = "Menu Item"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_BaseButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BaseButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_FireButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
